Revision history for Unix-errno

{{$NEXT}}

0.0.6  2024-06-25T14:21:15+02:00
    - Modernize test file extension
    - Modernize pod
    - Add sponsor link and button
    - Update copyright year

0.0.5  2021-11-07T12:32:09+01:00
    - Remove module statement, we don't need it anymore
    - Explicitely list NativeCall as a dependency

0.0.4  2021-09-09T23:59:47+02:00
    - Change file extension to .rakumod
    - Migrate to zef ecosystem
    - Update email address
    - Update copyright year

0.0.3  2019-11-08T23:10:23+01:00
    - change reference of Perl 6 to Raku

0.0.2  2018-04-30T16:42:31+02:00
    - make sure that string and value match in .gist
    - removed debug code when trying to set errno
    - changed to exporting a "errno" and "set_errno" subs
      Turns out you cannot currently export a variable that has a Proxy
      container rather than a Scalar container.  So any changes after the
      first FETCH of the C-library variable would not be seen.

0.0.1  2018-04-30T11:40:35+02:00
    - Initial version