@@ -1,9 +1,4 @@
-/blib/
-/src/*.o
-/src/Makefile
-/.panda-work
-/resources/*.so
-/resources/*.dylib
 .precomp/
 /releases/
 /Unix-errno-*
+*.rakucov
