@@ -6,7 +6,6 @@
   "build-depends": [
   ],
   "depends": [
-    "NativeCall"
   ],
   "description": "Provide transparent access to errno",
   "license": "Artistic-2.0",
