@@ -1,4 +1,4 @@
-[![Actions Status](https://github.com/lizmat/Unix-errno/workflows/test/badge.svg)](https://github.com/lizmat/Unix-errno/actions)
+[![Actions Status](https://github.com/lizmat/Unix-errno/actions/workflows/linux.yml/badge.svg)](https://github.com/lizmat/Unix-errno/actions) [![Actions Status](https://github.com/lizmat/Unix-errno/actions/workflows/macos.yml/badge.svg)](https://github.com/lizmat/Unix-errno/actions)
 
 NAME
 ====
@@ -26,7 +26,7 @@ This module provides access to the `errno` variable that is available on all Uni
 CAVEATS
 =======
 
-Since setting of any "extern" variables is not supported yet by `NativeCall`, the setting of `errno` is faked. If `set_errno` is called, it will set the value only in a shadow copy. That value will be returned As long as the underlying "real" errno doesn't change (at which point that value will be returned.
+Since setting of any "extern" variables is not supported yet by `NativeCall`, the setting of `errno` is faked. If `set_errno` is called, it will set the value only in a shadow copy. That value will be returned as long as the underlying "real" errno doesn't change (at which point that value will be returned.
 
 AUTHOR
 ======
@@ -40,7 +40,7 @@ If you like this module, or what I’m doing more generally, committing to a [sm
 COPYRIGHT AND LICENSE
 =====================
 
-Copyright 2018, 2021, 2024 Elizabeth Mattijsen
+Copyright 2018, 2021, 2024, 2025 Elizabeth Mattijsen
 
 This library is free software; you can redistribute it and/or modify it under the Artistic License 2.0.
 
