@@ -1,0 +1,55 @@
+=begin pod
+
+=head1 NAME
+
+Unix::errno - Provide transparent access to errno
+
+=head1 SYNOPSIS
+
+=begin code :lang<raku>
+
+use Unix::errno;  # exports errno, set_errno
+
+set_errno(2);
+
+say errno;              # No such file or directory (errno = 2)
+say "failed: {errno}";  # failed: No such file or directory
+say +errno;             # 2
+
+=end code
+
+=head1 DESCRIPTION
+
+This module provides access to the C<errno> variable that is available on
+all Unix-like systems.  Please note that in a threaded environment such as
+Raku is, the value of C<errno> is even more volatile than it has been
+already.  For now, this issue is ignored.
+
+=head1 CAVEATS
+
+Since setting of any "extern" variables is not supported yet by C<NativeCall>,
+the setting of C<errno> is faked.  If C<set_errno> is called, it will set
+the value only in a shadow copy.  That value will be returned as long as
+the underlying "real" errno doesn't change (at which point that value
+will be returned.
+
+=head1 AUTHOR
+
+Elizabeth Mattijsen <liz@raku.rocks>
+
+Source can be located at: https://github.com/lizmat/Unix-errno . Comments and
+Pull Requests are welcome.
+
+If you like this module, or what I’m doing more generally, committing to a
+L<small sponsorship|https://github.com/sponsors/lizmat/>  would mean a great
+deal to me!
+
+=head1 COPYRIGHT AND LICENSE
+
+Copyright 2018, 2021, 2024, 2025 Elizabeth Mattijsen
+
+This library is free software; you can redistribute it and/or modify it under the Artistic License 2.0.
+
+=end pod
+
+# vim: expandtab shiftwidth=4
